--- a/Frontend/App/index.html
+++ b/Frontend/App/index.html
@@ -6,7 +6,7 @@
   <!-- Contenu style page Word -->
   <main class="flex-1 flex justify-center items-start mt-10 px-4">
     <div class="bg-white shadow-lg rounded-xl p-10 w-full max-w-[794px] text-center"> <!-- A4 = 794px de large -->
-      <h1 class="text-4xl font-bold text-indigo-600 mb-6">Générateur de musique</h1>
+      <h1 class="text-4xl font-bold text-indigo-600 mb-6">PrompTune</h1>
       <p class="text-gray-700 text-lg leading-relaxed">
         Une idée, un prompt, une musique. <br><br>
         Notre IA compose pour vous.
