--- a/Frontend/base.html
+++ b/Frontend/base.html
@@ -1,12 +1,40 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
   <title>{% block title %}Titre par défaut{% endblock %}</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  
 </head>
 
 <body class="bg-gray-50 min-h-screen">
+<header class="pt-4 pb-2 relative flex items-center justify-between px-6">
+  <!-- Logo à gauche -->
+  <a href="{% url 'index' %}">
+    <img src="{% static 'images/logo_promptune.png' %}" alt="PrompTune Logo" class="w-16 h-16 object-contain" />
+  </a>
+
+  <!-- Titre centré -->
+  <h1 class="absolute left-1/2 transform -translate-x-1/2 text-2xl font-bold text-indigo-600">
+    PrompTune
+  </h1>
+
+  <!-- Connexion / Bonjour -->
+  <div class="text-right">
+    {% if user.is_authenticated %}
+      <span class="text-indigo-600 font-semibold">Bonjour, {{ user.first_name|default:user.username }}</span>
+    {% else %}
+      <a href="{% url 'login' %}" class="inline-block text-indigo-600 hover:underline transition" title="Se connecter">
+        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 inline" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 12H3m0 0l4-4m-4 4l4 4m13-8v8m0 0a2 2 0 01-2 2h-4a2 2 0 01-2-2V8a2 2 0 012-2h4a2 2 0 012 2z" />
+        </svg>
+      </a>
+    {% endif %}
+  </div>
+</header>
+
+
 
 <nav class="bg-white shadow-md">
   <div class="max-w-7xl mx-auto px-4 py-4 flex justify-between items-center">
@@ -25,13 +53,18 @@
     </div>
 
     <!-- Droite : Connexion / Déconnexion -->
-    <div class="w-1/3 text-right">
       {% if user.is_authenticated %}
-        <a href="{% url 'logout' %}" class="bg-indigo-600 text-white px-4 py-2 rounded-md hover:bg-indigo-700 transition">Se déconnecter</a>
-      {% else %}
-        <a href="{% url 'login' %}" class="bg-indigo-600 text-white px-4 py-2 rounded-md hover:bg-indigo-700 transition">Se connecter</a>
+        <div class="w-1/3 text-right">
+          <a href="{% url 'logout' %}" title="Se déconnecter" class="inline-block text-red-600 hover:underline transition">
+            <!-- Icône de déconnexion -->
+            <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 inline" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                    d="M17 16l4-4m0 0l-4-4m4 4H7m6 4v1a2 2 0 01-2 2H7a2 2 0 01-2-2V7a2 2 0 012-2h4a2 2 0 012 2v1" />
+            </svg>
+          </a>
+        </div>
       {% endif %}
-    </div>
+
 
   </div>
 </nav>
