--- a/Frontend/App/contact.html
+++ b/Frontend/App/contact.html
@@ -3,26 +3,25 @@
 {% load form_tags %}
 
 {% block content %}
-<div class="flex justify-center items-center mt-20">
-  <div class="bg-white p-10 rounded-lg shadow-md w-full max-w-lg">
-    <h2 class="text-3xl font-bold text-indigo-600 mb-6 text-center">Contactez-nous</h2>
+<div class="flex justify-center items-center mt-20 px-4">
+  <div class="bg-[#1e293b] p-10 rounded-lg shadow-md w-full max-w-lg">
+    <h2 class="text-3xl font-bold text-white mb-6 text-center">Contactez-nous</h2>
 
     <form method="post" novalidate>
       {% csrf_token %}
-        {% for field in form %}
+      {% for field in form %}
         <div class="mb-5">
-            <label for="{{ field.id_for_label }}" class="block text-gray-700 font-semibold mb-1">
+          <label for="{{ field.id_for_label }}" class="block text-gray-300 font-semibold mb-1">
             {{ field.label }}
-            </label>
-            {{ field|add_class:"w-full p-3 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-indigo-500" }}
-            {% if field.errors %}
-            <p class="text-red-600 text-sm mt-1">
-                {{ field.errors|striptags }}
+          </label>
+          {{ field|add_class:"w-full p-3 bg-[#0f172a] text-white border border-gray-600 rounded-md focus:outline-none focus:ring-2 focus:ring-indigo-500 placeholder-gray-400" }}
+          {% if field.errors %}
+            <p class="text-red-400 text-sm mt-1">
+              {{ field.errors|striptags }}
             </p>
-            {% endif %}
+          {% endif %}
         </div>
-        {% endfor %}
-
+      {% endfor %}
 
       <div class="text-center mt-6">
         <button type="submit"
