--- a/Frontend/App/success.html
+++ b/Frontend/App/success.html
@@ -3,16 +3,16 @@
 {% block title %}Succès{% endblock %}
 
 {% block content %}
-
   <!-- Contenu centré -->
-  <div class="flex justify-center items-center mt-20">
-    <div class="bg-white p-10 rounded-lg shadow-md text-center">
-      <h1 class="text-3xl font-bold text-green-600 mb-4">Félicitations 🎉</h1>
-      <p class="text-lg text-gray-700">Vous êtes connecté avec succès.</p><br>
-      <a href="{% url 'logout' %}" class="mt-4 bg-green-600 text-white px-4 py-2 rounded-md hover:bg-green-700 transition">
+  <div class="flex justify-center items-center mt-20 px-4">
+    <div class="bg-[#1e293b] p-10 rounded-lg shadow-md text-center">
+      <h1 class="text-3xl font-bold text-green-400 mb-4">Félicitations 🎉</h1>
+      <p class="text-lg text-gray-200">Vous êtes connecté avec succès.</p><br>
+      <a href="{% url 'logout' %}" class="mt-4 inline-block bg-green-600 text-white px-4 py-2 rounded-md hover:bg-green-700 transition">
         Déconnexion
       </a>
     </div>
   </div>
 {% endblock %}
+
 {% include "footer.html" %}
