--- a/Frontend/base.html
+++ b/Frontend/base.html
@@ -5,58 +5,56 @@
   <meta charset="UTF-8">
   <title>{% block title %}Titre par défaut{% endblock %}</title>
   <script src="https://cdn.tailwindcss.com"></script>
-  
 </head>
 
-<body class="bg-gray-50 min-h-screen">
-<header class="pt-4 pb-2 relative flex items-center justify-between px-6">
-  <!-- Logo à gauche -->
-  <a href="{% url 'index' %}">
-    <img src="{% static 'images/logo_promptune.png' %}" alt="PrompTune Logo" class="w-16 h-16 object-contain" />
-  </a>
+<body class="bg-[#0f172a] text-white min-h-screen">
+  <header class="pt-4 pb-2 relative flex items-center justify-between px-6">
+    <!-- Logo à gauche -->
+    <a href="{% url 'index' %}">
+      <img src="{% static 'images/logo_promptune-removebg.png' %}" alt="PrompTune Logo" class="w-16 h-16 object-contain" />
+    </a>
 
-  <!-- Titre centré -->
-  <h1 class="absolute left-1/2 transform -translate-x-1/2 text-2xl font-bold text-indigo-600">
-    PrompTune
-  </h1>
+    <!-- Titre centré -->
+    <h1 class="absolute left-1/2 transform -translate-x-1/2 text-2xl font-bold text-indigo-400">
+      PrompTune
+    </h1>
 
-  <!-- Connexion / Bonjour -->
-  <div class="text-right">
-    {% if user.is_authenticated %}
-      <span class="text-indigo-600 font-semibold">Bonjour, {{ user.first_name|default:user.username }}</span>
-    {% else %}
-      <a href="{% url 'login' %}" class="inline-block text-indigo-600 hover:underline transition" title="Se connecter">
-        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 inline" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 12H3m0 0l4-4m-4 4l4 4m13-8v8m0 0a2 2 0 01-2 2h-4a2 2 0 01-2-2V8a2 2 0 012-2h4a2 2 0 012 2z" />
-        </svg>
-      </a>
-    {% endif %}
-  </div>
-</header>
-
-
-
-<nav class="bg-white shadow-md">
-  <div class="max-w-7xl mx-auto px-4 py-4 flex justify-between items-center">
-
-    <!-- Gauche : Accueil -->
-    <div class="w-1/3 text-left">
-      <a href="{% url 'index' %}" class="text-xl font-semibold text-indigo-600 hover:underline">Accueil</a>
+    <!-- Connexion / Bonjour -->
+    <div class="text-right">
+      {% if user.is_authenticated %}
+        <span class="text-indigo-300 font-semibold">Bonjour, {{ user.first_name|default:user.username }}</span>
+      {% else %}
+        <a href="{% url 'login' %}" class="inline-block text-indigo-300 hover:underline hover:text-white transition" title="Se connecter">
+          <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 inline" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                  d="M15 12H3m0 0l4-4m-4 4l4 4m13-8v8m0 0a2 2 0 01-2 2h-4a2 2 0 01-2-2V8a2 2 0 012-2h4a2 2 0 012 2z" />
+          </svg>
+        </a>
+      {% endif %}
     </div>
-    <div class="w-1/3 text-center">
-      <a href="{% url 'generate' %}" class="text-xl font-semibold text-indigo-600 hover:underline">Générer de la musique</a>
-    </div>
+  </header>
 
-    <!-- Centre : Contact (même style que Accueil) -->
-    <div class="w-1/3 text-center">
-      <a href="{% url 'contact' %}" class="text-xl font-semibold text-indigo-600 hover:underline">Contact</a>
-    </div>
+  <nav class="bg-[#1e293b] shadow-md">
+    <div class="max-w-7xl mx-auto px-4 py-4 flex justify-between items-center text-white">
+      <!-- Gauche : Accueil -->
+      <div class="w-1/3 text-left">
+        <a href="{% url 'index' %}" class="text-xl font-semibold text-indigo-300 hover:text-white transition hover:underline">Accueil</a>
+      </div>
 
-    <!-- Droite : Connexion / Déconnexion -->
+      <!-- Centre : Générer -->
+      <div class="w-1/3 text-center">
+        <a href="{% url 'generate' %}" class="text-xl font-semibold text-indigo-300 hover:text-white transition hover:underline">Générer de la musique</a>
+      </div>
+
+      <!-- Droite : Contact -->
+      <div class="w-1/3 text-center">
+        <a href="{% url 'contact' %}" class="text-xl font-semibold text-indigo-300 hover:text-white transition hover:underline">Contact</a>
+      </div>
+
+      <!-- Déconnexion -->
       {% if user.is_authenticated %}
         <div class="w-1/3 text-right">
-          <a href="{% url 'logout' %}" title="Se déconnecter" class="inline-block text-red-600 hover:underline transition">
-            <!-- Icône de déconnexion -->
+          <a href="{% url 'logout' %}" title="Se déconnecter" class="inline-block text-red-400 hover:text-white hover:underline transition">
             <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 inline" fill="none" viewBox="0 0 24 24" stroke="currentColor">
               <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                     d="M17 16l4-4m0 0l-4-4m4 4H7m6 4v1a2 2 0 01-2 2H7a2 2 0 01-2-2V7a2 2 0 012-2h4a2 2 0 012 2v1" />
@@ -64,12 +62,8 @@
           </a>
         </div>
       {% endif %}
-
-
-  </div>
-</nav>
-
-
+    </div>
+  </nav>
 
   <!-- CONTENU SPÉCIFIQUE À CHAQUE PAGE -->
   <main class="p-6">
