--- a/Frontend/footer.html
+++ b/Frontend/footer.html
@@ -1,3 +1,5 @@
-<footer style="width: 100%; background-color: #f2f2f2; padding: 20px 0; text-align: center;">
-    <p style="margin: 0; font-size: 14px; color: #555;">@Projet réalisé par BLOCH Alexandre, JOUIN Victor, MEKIDECHE Yacine – 2025</p>
+<footer style="width: 100%; background-color: #1e293b; padding: 20px 0; text-align: center;">
+  <p style="margin: 0; font-size: 14px; color: #e5e7eb;">
+    © Projet réalisé par BLOCH Alexandre, JOUIN Victor, MEKIDECHE Yacine – 2025
+  </p>
 </footer>
