--- a/Frontend/App/generate.html
+++ b/Frontend/App/generate.html
@@ -7,20 +7,26 @@
   <div class="bg-[#1e293b] p-10 rounded-lg shadow-md w-full max-w-xl text-center">
     <h2 class="text-3xl font-bold text-white mb-6">Génération de musique IA</h2>
 
-    <form method="POST" action="{% url 'generate' %}">
+    <form method="POST" action="{% url 'generate' %}" class="mt-6">
       {% csrf_token %}
-      <div class="mb-4 text-left">
-        <label for="prompt" class="block text-gray-300 font-semibold mb-2">Décrivez la musique souhaitée :</label>
-        <textarea id="prompt" name="prompt" rows="4"
-                  placeholder="Ex : Une mélodie joyeuse pour un coucher de soleil en été..."
-                  class="w-full p-3 bg-[#0f172a] text-white border border-gray-600 rounded-md focus:outline-none focus:ring-2 focus:ring-indigo-500 placeholder-gray-400"></textarea>
+      <div class="flex items-center bg-[#0f172a] border border-gray-600 rounded-full px-4 py-2 shadow-sm focus-within:ring-2 focus-within:ring-indigo-500">
+        <input
+          type="text"
+          name="prompt"
+          id="prompt"
+          placeholder="Décrivez la musique à générer..."
+          class="flex-grow bg-transparent text-white placeholder-gray-400 focus:outline-none"
+          required
+        />
+        <button type="submit" title="Générer">
+          <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-indigo-400 hover:text-indigo-600 transition" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                  d="M5 12h14M12 5l7 7-7 7" />
+          </svg>
+        </button>
       </div>
-
-      <button type="submit"
-              class="bg-indigo-600 text-white px-6 py-2 rounded-md hover:bg-indigo-700 transition">
-        Générer
-      </button>
     </form>
+
 
     {% if generated_music_url %}
       <div class="mt-8">
