--- a/Frontend/App/index.html
+++ b/Frontend/App/index.html
@@ -1,13 +1,12 @@
-
 {% extends 'base.html' %}
 {% load static %}
 {% block title %}Accueil{% endblock %}
 
 {% block content %}
   <!-- Contenu style page Word -->
-  <main class="flex-1 flex justify-center items-start mt-10 px-4">
-    <div class="bg-[#1e293b] shadow-lg rounded-xl p-10 w-full max-w-[794px] text-center">
-      <h1 class="text-4xl font-bold text-white mb-6">PrompTune</h1>
+  <main class="flex-1 flex justify-center items-start mt-10 px-4 pb-20 bg-cover bg-center">
+    <div class="bg-[#1e293b] shadow-lg rounded-xl p-10 w-full max-w-[794px] text-center min-h-[600px] flex flex-col justify-center mb-16">
+      <h1 class="text-6xl font-extrabold text-white mb-8">PrompTune</h1>
       <p class="text-gray-200 text-lg leading-relaxed mb-8">
         Type it, Hear it !<br><br>
         Notre IA compose pour vous.
@@ -25,8 +24,7 @@
         Notre outil démocratise la composition musicale grâce à l’intelligence artificielle, en transformant vos idées en véritables créations sonores.  
         Il suffit d’un prompt, et la musique prend vie.
       </p>
-
     </div>
   </main>
-{% include "footer.html" %}
+
 {% endblock %}
