--- a/Frontend/footer.html
+++ b/Frontend/footer.html
@@ -1,5 +1,5 @@
-<footer style="width: 100%; background-color: #1e293b; padding: 20px 0; text-align: center;">
-  <p style="margin: 0; font-size: 14px; color: #e5e7eb;">
+<footer class="w-full bg-[#1e293b] py-5 text-center">
+  <p class="m-0 text-sm text-gray-200">
     © Projet réalisé par BLOCH Alexandre, JOUIN Victor, MEKIDECHE Yacine – 2025
   </p>
 </footer>
