--- a/Frontend/base.html
+++ b/Frontend/base.html
@@ -8,7 +8,7 @@
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
-<body class="bg-[#0f172a] text-white min-h-screen " style="background-image: url('{% static 'images/fond.jpg' %}');">
+<body class="bg-[#0f172a] text-white min-h-screen " style="background-image: url('{% static 'images/fondalt.png' %}');">
   <header class="pt-4 pb-2 relative flex items-center justify-between px-6">
     <!-- Logo à gauche -->
     <a href="{% url 'index' %}">
@@ -45,6 +45,12 @@
       <!-- Centre : Générer -->
       <div class="w-1/3 text-center">
         <a href="{% url 'generate' %}" class="text-xl font-semibold text-indigo-300 hover:text-white transition hover:underline">Générer de la musique</a>
+      </div>
+
+      <div class="w-1/3 text-center">
+        <a href="{% url 'help' %}" class="text-xl font-semibold text-indigo-300 hover:text-white transition hover:underline">
+          Nous aider
+        </a>
       </div>
 
       <!-- Droite : Contact -->
