--- a/Frontend/App/login.html
+++ b/Frontend/App/login.html
@@ -28,7 +28,7 @@
         </div>
 
         <button type="submit"
-                class="w-full bg-indigo-600 text-white py-2 rounded hover:bg-indigo-700 transition">
+                class="w-full bg-indigo-600 text-white py-2 rounded hover:bg-indigo-700 transition rounded-full">
           Se connecter
         </button>
       </form>
