--- a/Frontend/App/register.html
+++ b/Frontend/App/register.html
@@ -50,7 +50,7 @@
         </div>
 
         <button type="submit"
-                class="w-full bg-indigo-600 text-white py-2 rounded hover:bg-indigo-700 transition">
+                class="w-full bg-indigo-600 text-white py-2 rounded hover:bg-indigo-700 transition rounded-full">
           S'inscrire
         </button>
       </form>
