--- a/Frontend/App/generate.html
+++ b/Frontend/App/generate.html
@@ -9,9 +9,12 @@
   <div class="flex justify-center mt-20">
     <div class="bg-[#1e293b] p-10 rounded-lg shadow-md w-full max-w-xl text-center">
       <h2 class="text-3xl font-bold text-white mb-6">Générer votre musique</h2>
-
+      {% if feedback_message %}
+        <p class="text-gray-300">{{ feedback_message }}</p>
+      {% endif %}
       <form method="POST" action="{% url 'generate' %}" class="mt-6">
         {% csrf_token %}
+        <input type="hidden" name="form_type" value="generation">
         <div class="flex items-center bg-[#0f172a] border border-gray-600 rounded-full px-4 py-2 shadow-sm focus-within:ring-2 focus-within:ring-indigo-500">
           <input
             type="text"
@@ -50,6 +53,8 @@
       <p class="text-gray-300">Merci de prendre un moment pour évaluer la musique générée. Votre retour est précieux pour améliorer notre service.</p>
       <form method="POST" action="{% url 'generate' %}" class="mt-6">
         {% csrf_token %}
+        <input type="hidden" name="form_type" value="feedback">
+
         <div class="bg-[#0f172a] border border-gray-600 rounded-xl px-6 py-4 shadow-sm space-y-4 text-white">
           
           <!-- Étoiles -->
