--- a/Frontend/App/generate.html
+++ b/Frontend/App/generate.html
@@ -31,6 +31,13 @@
             </svg>
           </button>
         </div>
+        <!-- Loader affiché pendant la génération -->
+        <div id="music-loader" class="hidden flex flex-col items-center mt-8">
+          <div class="w-56 bg-gray-800 rounded-full h-3 flex items-center">
+            <div id="loader-bar" class="bg-indigo-500 h-3 rounded-full transition-all duration-200" style="width: 0%"></div>
+          </div>
+          <span class="mt-3 text-white animate-pulse">Génération en cours...</span>
+        </div>
       </form>
 
       {% if generated_music_url %}
@@ -134,6 +141,29 @@
       </div>
     </div>
   {% endif %}
+    <script>
+        // Loader barre de chargement pour la génération de musique
+        document.addEventListener("DOMContentLoaded", function() {
+          const generationForm = document.querySelector('form[action="{% url 'generate' %}"][method="POST"]');
+          const loader = document.getElementById('music-loader');
+          const loaderBar = document.getElementById('loader-bar');
+          if (generationForm && loader) {
+            generationForm.addEventListener('submit', function() {
+              loader.classList.remove('hidden');
+              loaderBar.style.width = '0%';
+              let percent = 0;
+              // Animation de progression fake
+              const interval = setInterval(() => {
+                percent += Math.random() * 3 + 2; // un peu plus rapide et progressif
+                if (percent >= 95) percent = 95; // stoppe à 95% tant que la génération n'est pas finie
+                loaderBar.style.width = percent + '%';
+              }, 250);
 
+              // Astuce : au prochain rechargement (quand résultat est prêt), tout disparait automatiquement.
+              // Si tu veux interrompre l'interval à la main, tu peux aussi utiliser un id global.
+            });
+          }
+        });
+      </script>
 </div>
 {% endblock %}
