--- a/Frontend/App/login.html
+++ b/Frontend/App/login.html
@@ -14,7 +14,7 @@
       <form method="post" class="space-y-4">
         {% csrf_token %}
         <div>
-          <label for="my_username" class="block text-sm font-medium text-gray-300">Nom d'utilisateur</label>
+          <label for="my_username" class="block text-sm font-medium text-gray-300">Email</label>
           <input type="text" name="my_username" id="my_username"
                  class="w-full bg-[#0f172a] text-white border border-gray-600 rounded px-3 py-2 focus:outline-none focus:ring-2 focus:ring-indigo-500"
                  required>
