--- a/Frontend/App/generate.html
+++ b/Frontend/App/generate.html
@@ -7,7 +7,8 @@
   <!-- DEBUG CONTEXTE -->
   <div class="bg-yellow-900 text-white text-sm p-4 rounded mt-6 mb-8">
     <strong>DEBUG CONTEXTE :</strong><br>
-    <b>generated_musics:</b> {{ generated_musics }}<br>
+    <b>mid_urls:</b> {{ mid_urls }}<br>
+    <b>wav_urls:</b> {{ wav_urls }}<br>
     <b>music_group_id:</b> {{ music_group_id }}<br>
     <b>prompt:</b> {{ prompt }}<br>
     <b>feedback_message:</b> {{ feedback_message }}
@@ -43,36 +44,42 @@
   </div>
 
   <!-- AFFICHAGE DES MUSIQUES GÉNÉRÉES -->
-  {% if generated_musics %}
-  <div class="flex justify-center mt-12">
-    <div class="bg-[#1e293b] p-10 rounded-lg shadow-md w-full max-w-2xl text-center">
-      <h2 class="text-3xl font-bold text-white mb-6">Choisissez votre version préférée</h2>
-      <form method="POST" action="{% url 'generate' %}" class="space-y-6">
-        {% csrf_token %}
-        <input type="hidden" name="form_type" value="feedback">
-        <input type="hidden" name="music_group_id" value="{{ music_group_id }}">
+  {% if zipped_musics %}
+<div class="flex justify-center mt-12">
+  <div class="bg-[#1e293b] p-10 rounded-lg shadow-md w-full max-w-2xl text-center">
+    <h2 class="text-3xl font-bold text-white mb-6">Choisissez votre version préférée</h2>
+    <form method="POST" action="{% url 'generate' %}" class="space-y-6">
+      {% csrf_token %}
+      <input type="hidden" name="form_type" value="feedback">
+      <input type="hidden" name="music_group_id" value="{{ music_group_id }}">
 
-        <div class="grid grid-cols-1 gap-6">
-          {% for audio_url in generated_musics %}
-          <div class="bg-[#0f172a] border border-gray-600 rounded-xl p-4 flex items-center space-x-4">
+      <div class="grid grid-cols-1 gap-6">
+        {% for wav, mid in zipped_musics %}
+        <div class="bg-[#0f172a] border border-gray-600 rounded-xl p-4 flex flex-col space-y-2">
+          <div class="flex items-center space-x-4">
             <input type="radio" name="preferred_version" value="{{ forloop.counter0 }}" required>
             <audio controls class="w-full">
-              <source src="{{ audio_url }}" type="audio/mpeg">
+              <source src="{{ wav }}" type="audio/wav">
               Votre navigateur ne supporte pas la lecture audio.
             </audio>
           </div>
-          {% endfor %}
+          <div class="text-sm text-gray-300 text-left pl-8">
+            <a href="{{ mid }}" class="hover:underline text-indigo-400" download>Télécharger .mid</a> |
+            <a href="{{ wav }}" class="hover:underline text-indigo-400" download>Télécharger .wav</a>
+          </div>
         </div>
+        {% endfor %}
+      </div>
 
-        <div class="mt-6 text-right">
-          <button type="submit" class="px-4 py-2 bg-indigo-600 hover:bg-indigo-700 text-white rounded-lg">
-            Envoyer mon choix
-          </button>
-        </div>
-      </form>
-    </div>
+      <div class="mt-6 text-right">
+        <button type="submit" class="px-4 py-2 bg-indigo-600 hover:bg-indigo-700 text-white rounded-lg">
+          Envoyer mon choix
+        </button>
+      </div>
+    </form>
   </div>
-  {% endif %}
+</div>
+{% endif %}
 
   {% if feedback_message %}
   <div class="mt-6 text-center text-green-400 text-lg">
